# opoch-toe-arc-agi-v3

./: .gitignore  ARCHITECTURAL_FIX_COMPLETE.md  README.md  WO10A_VALIDATION_REPORT.md  ids.txt  ids_all1000_wo02.txt  ids_sweep100_wo02.txt  ids_sweep50_wo02.txt  pyproject.toml  test_wo10a_macro_tiling.py  test_wo10c_pooled_blocks.py  test_wo10e_slice_stack.py  wo04_raw_receipts_for_examination.json
arc/: __init__.py  runner.py
arc/io/: __init__.py  load_data.py  save.py
arc/op/: __init__.py  admit.py  anchor.py  border_scalar.py  bytes.py  components.py  copy.py  d4.py  families.py  hash.py  kronecker.py  kronecker_mask.py  markers_grid.py  meet.py  palette.py  pi.py  pooled_blocks.py  receipts.py  shape.py  slice_stack.py  tiebreak.py  truth.py  unanimity.py  witness.py
content_dependent_tasks/: SWEEP_FILES_README.md  WO04_BATTLE_TEST_REPORT.md  WO04_FREEZE_REPORT.md  ids_content_dependent.txt  wo-04_sweep_clarity.md
docs/: common_mistakes.md  receipts_discipline.md  worked_examples.md
docs/WOs/: WO-00.md  WO-01.md  WO-02.md  WO-03.md  WO-04.md  WO-05.md  WO-06.md  WO-07.md  WO-08.md  WO-09.md  WO-10.md  WO-11.md  WO-pre-11.md  WO-pre-stub-fix-11.md  WO-updated-pipeline.md  all_WOs.md
docs/anchors/: 00_math_spec.md  01_1_engineering_spec.md  01_engineering_spec.md  01_engineering_spec_updated_pipeline.md  01_math_spec_patch.md  02_determinism_addendum.md  03_repo_structure.md
docs/human_pair_programmer_files/: agent_initiations.md  arc_agi_testing.md  code_math_reviewer.md  (+2 more)
scripts/: check_receipts.py  run_tasks.py  run_wo.py  test_kronecker.py
