# pyproject.toml
# ARC-AGI Operator: Deterministic, receipts-first solver

[project]
name = "arc-agi-operator"
version = "0.0.1"
description = "Search-free ARC-AGI solver with receipts-first determinism"
requires-python = ">=3.11"
dependencies = [
    "blake3==0.4.1",
    "numpy==1.26.4",
]

[project.optional-dependencies]
dev = [
    "ruff==0.1.9",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled by formatter
